Fix appearing scrollbar in firefox when loading query with spatial information (#2439)

--- a/frontend/src/app/+research/facets/facets.component.scss
+++ b/frontend/src/app/+research/facets/facets.component.scss
@@ -1,7 +1,8 @@
 @import "src/variables";
 
 :host {
-  overflow: auto;
+  // overflow leads to scrollbars in firefox when switching to tab search with a remembered location
+  //overflow: auto;
 }
 
 .main-section-title {
