--- a/frontend/src/app/+research/result-table/result-table.component.scss
+++ b/frontend/src/app/+research/result-table/result-table.component.scss
@@ -18,9 +18,9 @@
     color: $ige-primary;
 
     display: inline-block;
-    /* text-align: left; */
     margin: auto;
     width: 50%;
+    white-space: nowrap;
   }
 
   .result-buttons {
